--- a/aac-front/public/index.html
+++ b/aac-front/public/index.html
@@ -2,42 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Favicon principal -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Descripción general del sitio -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Educación financiera para jóvenes. Aprende Ahora y Crece."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Aprende Ahora y Crece</title>
+    <!-- Apple icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Manifest (PWA) -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Open Graph (Para WhatsApp, Facebook, LinkedIn, Discord) -->
+    <meta property="og:title" content="AAC – Aprende Ahora y Crece" />
+    <meta
+      property="og:description"
+      content="Educación financiera para jóvenes. Aprende Ahora y Crece."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta
+      property="og:url"
+      content="https://aac-web-self.vercel.app"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter / WhatsApp (vista previa grande) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
+
+    <!-- Título en la pestaña del navegador -->
+    <title>AAC – Aprende Ahora y Crece</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
